webRtcEndpoint: test for WebRtcEp C++ element
ISSUE:3672-trickle_ice
Change-Id: Iedcd21a7258925728234dc9fe5427c4ba13e901d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ install_git_hook (pre-commit ${CMAKE_CURRENT_SOURCE_DIR}/hooks/pre-commit.hook)
 
 include (GenericFind)
 
+generic_find (LIBNAME Boost REQUIRED COMPONENTS unit_test_framework)
+
 set (GST_REQUIRED ~1.4.4)
 set (GLIB_REQUIRED ^2.38)
 set (SOUP_REQUIRED ^2.40)
