--- a/tests/server/CMakeLists.txt
+++ b/tests/server/CMakeLists.txt
@@ -22,3 +22,25 @@ target_link_libraries(test_constructors
   ${KMSCORE_LIBRARIES}
   ${glibmm-2.0_LIBRARIES}
 )
+
+add_test_program (test_webrtc_endpoint webRtcEndpoint.cpp)
+add_dependencies(test_webrtc_endpoint kmselementsplugins ${LIBRARY_NAME}impls)
+set_property (TARGET test_webrtc_endpoint
+  PROPERTY INCLUDE_DIRECTORIES
+    ${KmsJsonRpc_INCLUDE_DIRS}
+    ${sigc++-2.0_INCLUDE_DIRS}
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../src/server/implementation/objects
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../src/server/implementation
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../src/server/interface
+    ${CMAKE_CURRENT_BINARY_DIR}/../../src/server/interface/generated-cpp
+    ${CMAKE_CURRENT_BINARY_DIR}/../../src/server/implementation/generated-cpp
+    ${KMSCORE_INCLUDE_DIRS}
+    ${glibmm-2.4_INCLUDE_DIRS}
+    ${gstreamer-1.0_INCLUDE_DIRS}
+)
+
+target_link_libraries(test_webrtc_endpoint
+  ${LIBRARY_NAME}impl
+  ${KMSCORE_LIBRARIES}
+  ${glibmm-2.4_LIBRARIES}
+)
