kmswebrtcendpoint: stub for trickle ICE
ISSUE:3672-trickle_ice
Change-Id: I76750e5adaf7b239e02502a5e14d3ab8e171f133

--- a/src/gst-plugins/webrtcendpoint/CMakeLists.txt
+++ b/src/gst-plugins/webrtcendpoint/CMakeLists.txt
@@ -41,6 +41,8 @@ set(KMS_WEBRTC_HEADERS
   kmswebrtcendpoint.h
 )
 
+add_glib_marshal(KMS_WEBRTC_SOURCES KMS_WEBRTC_HEADERS kms-webrtc-marshal __kms_webrtc_marshal)
+
 add_library(webrtcendpoint MODULE ${KMS_WEBRTC_SOURCES} ${KMS_WEBRTC_HEADERS})
 
 add_dependencies(webrtcendpoint kmsdtls rtcpdemux)
