--- a/tests/check/element/CMakeLists.txt
+++ b/tests/check/element/CMakeLists.txt
@@ -85,16 +85,16 @@ target_link_libraries(test_webrtcendpoint
                       ${KmsGstCommons_LIBRARIES}
                       kmstestutils)
 
-#add_test_program (test_compositemixer compositemixer.c)
-#add_dependencies(test_compositemixer kmstestutils kmscore kmselements)
-#target_include_directories(test_compositemixer PRIVATE
-#                           ${KmsGstCommons_INCLUDE_DIRS}
-#                           ${gstreamer-1.0_INCLUDE_DIRS}
-#                           ${gstreamer-check-1.0_INCLUDE_DIRS})
-#target_link_libraries(test_compositemixer
-#                      ${gstreamer-1.0_LIBRARIES}
-#                      ${gstreamer-check-1.0_LIBRARIES}
-#                      ${KmsGstCommons_LIBRARIES})
+add_test_program (test_compositemixer compositemixer.c)
+add_dependencies(test_compositemixer kmstestutils kmscore kmselements)
+target_include_directories(test_compositemixer PRIVATE
+                           ${KmsGstCommons_INCLUDE_DIRS}
+                           ${gstreamer-1.0_INCLUDE_DIRS}
+                           ${gstreamer-check-1.0_INCLUDE_DIRS})
+target_link_libraries(test_compositemixer
+                      ${gstreamer-1.0_LIBRARIES}
+                      ${gstreamer-check-1.0_LIBRARIES}
+                      ${KmsGstCommons_LIBRARIES})
 
 add_test_program (test_dispatcheronetomany dispatcheronetomany.c)
 add_dependencies(test_dispatcheronetomany kmstestutils kmscore kmselements)
