WebrtcEndpoint: extend API for trickle ICE support
ISSUE:3672-trickle_ice
Change-Id: Idecce14a455fcc988ab88c60b27e85419c17d1dd

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -10,6 +10,7 @@ generate_code (
   MODELS ${CMAKE_CURRENT_SOURCE_DIR}/interface
   SERVER_IMPL_LIB_EXTRA_INCLUDE_DIRS
       ${CMAKE_CURRENT_SOURCE_DIR}/implementation
-  SERVER_IMPL_LIB_EXTRA_LIBRARIES kmshttpep
+      ${CMAKE_CURRENT_SOURCE_DIR}/../gst-plugins
+  SERVER_IMPL_LIB_EXTRA_LIBRARIES kmshttpep icecandidate
   SERVER_STUB_DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/implementation/objects
 )
