--- a/tests/check/element/CMakeLists.txt
+++ b/tests/check/element/CMakeLists.txt
@@ -78,7 +78,8 @@ add_dependencies(test_webrtcendpoint kmstestutils kmscore kmsdtls ${LIBRARY_NAME
 target_include_directories(test_webrtcendpoint PRIVATE
                            ${KmsGstCommons_INCLUDE_DIRS}
                            ${gstreamer-1.0_INCLUDE_DIRS}
-                           ${gstreamer-check-1.0_INCLUDE_DIRS})
+                           ${gstreamer-check-1.0_INCLUDE_DIRS}
+                           "${CMAKE_CURRENT_SOURCE_DIR}/../../../src/gst-plugins")
 target_link_libraries(test_webrtcendpoint
                       ${gstreamer-1.0_LIBRARIES}
                       ${gstreamer-check-1.0_LIBRARIES}
