CMakeList.txt: Increase timeout of valgrind tests
Change-Id: I2e3c0b1d6c01e8813e88564421dded19eb31e746

--- a/tests/check/CMakeLists.txt
+++ b/tests/check/CMakeLists.txt
@@ -26,6 +26,12 @@ set (TEST_PROPERTIES
   CK_DEFAULT_TIMEOUT=50
   )
 
+set (VALGRING_TEST_PROPERTIES
+  ${TEST_PROPERTIES}
+  CK_DEFAULT_TIMEOUT=1000
+  )
+
+
 add_subdirectory(element)
 
 # if (${ENABLE_INTEGRATION_TESTS})
