Update gstreamer dependencies
Change-Id: I5c6cb982cd05dd38088b323d9aaca413068eb8cd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,25 +22,25 @@ include (GenericFind)
 
 generic_find (LIBNAME Boost REQUIRED COMPONENTS unit_test_framework)
 
-set (GST_REQUIRED ~1.4.4)
+set (GST_REQUIRED ~1.5.0)
 set (GLIB_REQUIRED ^2.38)
 set (SOUP_REQUIRED ^2.40)
-set (NICE_REQUIRED ^0.1.7)
+set (NICE_REQUIRED ^0.1.10)
 set (GNUTLS_REQUIRED ^3.2.0)
 set (GLIBMM_REQUIRED ^2.37)
 
 #gst-plugins dependencies
-generic_find (LIBNAME gstreamer-1.0 VERSION ${GST_REQUIRED} REQUIRED)
-generic_find (LIBNAME gstreamer-base-1.0 VERSION ${GST_REQUIRED} REQUIRED)
-generic_find (LIBNAME gstreamer-video-1.0 VERSION ${GST_REQUIRED} REQUIRED)
-generic_find (LIBNAME gstreamer-check-1.0 VERSION ${GST_REQUIRED} REQUIRED)
-generic_find (LIBNAME gstreamer-sdp-1.0 VERSION ${GST_REQUIRED} REQUIRED)
-generic_find (LIBNAME gstreamer-rtp-1.0 VERSION ${GST_REQUIRED} REQUIRED)
-generic_find (LIBNAME gstreamer-pbutils-1.0 VERSION ${GST_REQUIRED} REQUIRED)
+generic_find (LIBNAME gstreamer-1.5 VERSION ${GST_REQUIRED} REQUIRED)
+generic_find (LIBNAME gstreamer-base-1.5 VERSION ${GST_REQUIRED} REQUIRED)
+generic_find (LIBNAME gstreamer-video-1.5 VERSION ${GST_REQUIRED} REQUIRED)
+generic_find (LIBNAME gstreamer-check-1.5 VERSION ${GST_REQUIRED} REQUIRED)
+generic_find (LIBNAME gstreamer-sdp-1.5 VERSION ${GST_REQUIRED} REQUIRED)
+generic_find (LIBNAME gstreamer-rtp-1.5 VERSION ${GST_REQUIRED} REQUIRED)
+generic_find (LIBNAME gstreamer-pbutils-1.5 VERSION ${GST_REQUIRED} REQUIRED)
 generic_find (LIBNAME glibmm-2.4 VERSION ${GLIBMM_REQUIRED} REQUIRED)
 generic_find (LIBNAME KmsGstCommons REQUIRED)
 generic_find (LIBNAME libsoup-2.4 VERSION ${SOUP_REQUIRED} REQUIRED)
-generic_find (LIBNAME nice VERSION ${NICE_REQUIRED} REQUIRED)
+generic_find (LIBNAME nice0.1.10 VERSION ${NICE_REQUIRED} REQUIRED)
 generic_find (LIBNAME gnutls VERSION ${GNUTLS_REQUIRED} GNUTLS REQUIRED)
 generic_find (LIBNAME gio-2.0 VERSION ${GLIB_REQUIRED} REQUIRED)
 generic_find (LIBNAME uuid REQUIRED)
@@ -53,7 +53,7 @@ set (ENABLE_DEBUGGING_TESTS OFF CACHE BOOL "Enable test that are not yet stable"
 
 include(GNUInstallDirs)
 
-set (CMAKE_INSTALL_GST_PLUGINS_DIR ${CMAKE_INSTALL_LIBDIR}/gstreamer-1.0)
+set (CMAKE_INSTALL_GST_PLUGINS_DIR ${CMAKE_INSTALL_LIBDIR}/gstreamer-1.5)
 set (KURENTO_MODULES_SO_DIR ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/${KURENTO_MODULES_DIR_INSTALL_PREFIX})
 
 set (BINARY_LOCATION "http://files.kurento.org/" CACHE STRING "Local binary directory expressed as an URI ( http:// or file:/// )")
