--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 8.0.0),
  pkg-config,
  kms-core-6.0-dev,
  libboost-filesystem-dev,
+ libboost-test-dev,
  libsoup2.4-dev,
  libgnutls28-dev,
  libnice-dev (>= 0.1.7),
