--- a/tests/server/CMakeLists.txt
+++ b/tests/server/CMakeLists.txt
@@ -1,6 +1,13 @@
 set (TEST_PROPERTIES
   GST_PLUGIN_PATH=$ENV{GST_PLUGIN_PATH}:${CMAKE_PREFIX_PATH}:${CMAKE_BINARY_DIR}
+  DEBUG_MEDIASET=TRUE
 )
+
+set (VALGRING_TEST_PROPERTIES
+  ${TEST_PROPERTIES}
+)
+
+set (SUPPRESSIONS "${CMAKE_CURRENT_SOURCE_DIR}/valgrind.supp")
 
 add_test_program (test_constructors constructors.cpp)
 add_dependencies(test_constructors ${LIBRARY_NAME}module ${LIBRARY_NAME}impl ${LIBRARY_NAME}plugins)
