--- a/tests/server/CMakeLists.txt
+++ b/tests/server/CMakeLists.txt
@@ -1,6 +1,6 @@
 set (TEST_PROPERTIES
   GST_PLUGIN_PATH=$ENV{GST_PLUGIN_PATH}:${CMAKE_PREFIX_PATH}:${CMAKE_BINARY_DIR}
-  DEBUG_MEDIASET=TRUE
+#  DEBUG_MEDIASET=TRUE
 )
 
 set (VALGRING_TEST_PROPERTIES
