Disable deprecation warnings while using soup library
Change-Id: I71e30501d2536659a1cbfe7275554ff22e21ef45

--- a/src/server/implementation/HttpServer/CMakeLists.txt
+++ b/src/server/implementation/HttpServer/CMakeLists.txt
@@ -36,7 +36,7 @@ add_library(kmshttpep ${HTTP_EP_SOURCES})
 
 set_target_properties(kmshttpep PROPERTIES
   PUBLIC_HEADER "${HTTP_EP_HEADERS}"
-  COMPILE_FLAGS "-fPIC"
+  COMPILE_FLAGS "-fPIC -Wno-deprecated-declarations"
 )
 
 include_directories(kmshttpep
