Change nice dependency to kmsnice
Change-Id: If22572adf23f0f01b8bd827a37e75179921a98bf

--- a/src/gst-plugins/rtpendpoint/CMakeLists.txt
+++ b/src/gst-plugins/rtpendpoint/CMakeLists.txt
@@ -22,7 +22,7 @@ include_directories(
   ${gstreamer-pbutils-1.5_INCLUDE_DIRS}
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
-  ${nice0.1.10_INCLUDE_DIRS}
+  ${kmsnice_INCLUDE_DIRS}
 )
 
 target_link_libraries(rtpendpoint
@@ -31,7 +31,7 @@ target_link_libraries(rtpendpoint
   ${gstreamer-base-1.5_LIBRARIES}
   ${gstreamer-sdp-1.5_LIBRARIES}
   ${gstreamer-pbutils-1.5_LIBRARIES}
-  ${nice0.1.10_LIBRARIES}
+  ${kmsnice_LIBRARIES}
 )
 
 install(
