--- a/src/gst-plugins/webrtcendpoint/CMakeLists.txt
+++ b/src/gst-plugins/webrtcendpoint/CMakeLists.txt
@@ -20,11 +20,11 @@ set_target_properties(icecandidate PROPERTIES PUBLIC_HEADER "${KMS_ICE_CANDIDATE
 set_target_properties(icecandidate PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
 
 include_directories(
-  ${nice0.1.10_INCLUDE_DIRS}
+  ${kmsnice_INCLUDE_DIRS}
 )
 
 target_link_libraries(icecandidate
-  ${nice0.1.10_LIBRARIES}
+  ${kmsnice_LIBRARIES}
 )
 
 install(
@@ -62,7 +62,7 @@ include_directories(
   ${gstreamer-pbutils-1.5_INCLUDE_DIRS}
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
-  ${nice0.1.10_INCLUDE_DIRS}
+  ${kmsnice_INCLUDE_DIRS}
 )
 
 target_link_libraries(webrtcendpoint
@@ -71,7 +71,7 @@ target_link_libraries(webrtcendpoint
   ${gstreamer-1.5_LIBRARIES}
   ${gstreamer-base-1.5_LIBRARIES}
   ${gstreamer-pbutils-1.5_LIBRARIES}
-  ${nice0.1.10_LIBRARIES}
+  ${kmsnice_LIBRARIES}
 )
 
 install(
