--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ generic_find (LIBNAME gstreamer-pbutils-1.5 VERSION ${GST_REQUIRED} REQUIRED)
 generic_find (LIBNAME glibmm-2.4 VERSION ${GLIBMM_REQUIRED} REQUIRED)
 generic_find (LIBNAME KmsGstCommons REQUIRED)
 generic_find (LIBNAME libsoup-2.4 VERSION ${SOUP_REQUIRED} REQUIRED)
-generic_find (LIBNAME nice0.1.10 VERSION ${NICE_REQUIRED} REQUIRED)
+generic_find (LIBNAME kmsnice VERSION ${NICE_REQUIRED} REQUIRED)
 generic_find (LIBNAME gnutls VERSION ${GNUTLS_REQUIRED} GNUTLS REQUIRED)
 generic_find (LIBNAME gio-2.0 VERSION ${GLIB_REQUIRED} REQUIRED)
 generic_find (LIBNAME uuid REQUIRED)
