--- a/tests/check/element/CMakeLists.txt
+++ b/tests/check/element/CMakeLists.txt
@@ -1,7 +1,7 @@
 set (SUPRESSIONS "${CMAKE_CURRENT_SOURCE_DIR}/../valgrind.supp")
 
 add_test_program (test_httpendpoint httpendpoint.c)
-add_dependencies(test_httpendpoint kmscore ${LIBRARY_NAME}plugins)
+add_dependencies(test_httpendpoint ${LIBRARY_NAME}plugins)
 target_include_directories(test_httpendpoint PRIVATE
                            ${KmsGstCommons_INCLUDE_DIRS}
                            ${gstreamer-1.5_INCLUDE_DIRS}
@@ -13,7 +13,7 @@ target_link_libraries(test_httpendpoint
                       ${KmsGstCommons_LIBRARIES})
 
 add_test_program (test_recorderendpoint recorderendpoint.c)
-add_dependencies(test_recorderendpoint kmscore ${LIBRARY_NAME}plugins)
+add_dependencies(test_recorderendpoint ${LIBRARY_NAME}plugins)
 target_include_directories(test_recorderendpoint PRIVATE
                            ${KmsGstCommons_INCLUDE_DIRS}
                            ${gstreamer-1.5_INCLUDE_DIRS}
@@ -25,7 +25,7 @@ target_link_libraries(test_recorderendpoint
                       ${KmsGstCommons_LIBRARIES})
 
 add_test_program (test_playerendpoint playerendpoint.c)
-add_dependencies(test_playerendpoint kmstestutils kmscore ${LIBRARY_NAME}plugins)
+add_dependencies(test_playerendpoint kmstestutils ${LIBRARY_NAME}plugins)
 target_include_directories(test_playerendpoint PRIVATE
                            ${KmsGstCommons_INCLUDE_DIRS}
                            ${gstreamer-1.5_INCLUDE_DIRS}
@@ -38,7 +38,7 @@ target_link_libraries(test_playerendpoint
                       kmstestutils)
 
 add_test_program (test_rtpendpoint rtpendpoint.c)
-add_dependencies(test_rtpendpoint kmstestutils kmscore ${LIBRARY_NAME}plugins)
+add_dependencies(test_rtpendpoint kmstestutils ${LIBRARY_NAME}plugins)
 target_include_directories(test_rtpendpoint PRIVATE
                            ${KmsGstCommons_INCLUDE_DIRS}
                            ${gstreamer-1.5_INCLUDE_DIRS}
@@ -50,7 +50,7 @@ target_link_libraries(test_rtpendpoint
                       kmstestutils)
 
 add_test_program (test_rtpendpoint_audio rtpendpoint_audio.c)
-add_dependencies(test_rtpendpoint_audio kmstestutils kmscore ${LIBRARY_NAME}plugins)
+add_dependencies(test_rtpendpoint_audio kmstestutils ${LIBRARY_NAME}plugins)
 target_include_directories(test_rtpendpoint_audio PRIVATE
                            ${KmsGstCommons_INCLUDE_DIRS}
                            ${gstreamer-1.5_INCLUDE_DIRS}
@@ -62,7 +62,7 @@ target_link_libraries(test_rtpendpoint_audio
                       kmstestutils)
 
 # add_test_program (test_rtpendpoint_video rtpendpoint_video.c)
-# add_dependencies(test_rtpendpoint_video kmstestutils kmscore ${LIBRARY_NAME}plugins)
+# add_dependencies(test_rtpendpoint_video kmstestutils ${LIBRARY_NAME}plugins)
 # target_include_directories(test_rtpendpoint_video PRIVATE
 #                            ${KmsGstCommons_INCLUDE_DIRS}
 #                            ${gstreamer-1.5_INCLUDE_DIRS}
@@ -74,7 +74,7 @@ target_link_libraries(test_rtpendpoint_audio
 #                       kmstestutils)
 
 add_test_program (test_webrtcendpoint webrtcendpoint.c)
-add_dependencies(test_webrtcendpoint kmstestutils kmscore kmsdtls ${LIBRARY_NAME}plugins)
+add_dependencies(test_webrtcendpoint kmstestutils ${LIBRARY_NAME}plugins)
 target_include_directories(test_webrtcendpoint PRIVATE
                            ${KmsGstCommons_INCLUDE_DIRS}
                            ${gstreamer-1.5_INCLUDE_DIRS}
@@ -89,7 +89,7 @@ target_link_libraries(test_webrtcendpoint
                       kmstestutils)
 
 #add_test_program (test_compositemixer compositemixer.c)
-#add_dependencies(test_compositemixer kmstestutils kmscore kmselements)
+#add_dependencies(test_compositemixer kmstestutils)
 #target_include_directories(test_compositemixer PRIVATE
 #                           ${KmsGstCommons_INCLUDE_DIRS}
 #                           ${gstreamer-1.5_INCLUDE_DIRS}
@@ -100,7 +100,7 @@ target_link_libraries(test_webrtcendpoint
 #                      ${KmsGstCommons_LIBRARIES})
 
 add_test_program (test_dispatcheronetomany dispatcheronetomany.c)
-add_dependencies(test_dispatcheronetomany kmstestutils kmscore kmselements)
+add_dependencies(test_dispatcheronetomany kmstestutils)
 target_include_directories(test_dispatcheronetomany PRIVATE
                            ${KmsGstCommons_INCLUDE_DIRS}
                            ${gstreamer-1.5_INCLUDE_DIRS}
@@ -111,7 +111,7 @@ target_link_libraries(test_dispatcheronetomany
                       ${KmsGstCommons_LIBRARIES})
 
 add_test_program (test_dispatcher dispatcher.c)
-add_dependencies(test_dispatcher kmstestutils kmscore kmselements)
+add_dependencies(test_dispatcher kmstestutils)
 target_include_directories(test_dispatcher PRIVATE
                            ${KmsGstCommons_INCLUDE_DIRS}
                            ${gstreamer-1.5_INCLUDE_DIRS}
@@ -122,7 +122,7 @@ target_link_libraries(test_dispatcher
                       ${KmsGstCommons_LIBRARIES})
 
 #add_test_program (test_alphablending alphablending.c)
-#add_dependencies(test_alphablending kmstestutils kmscore kmselements)
+#add_dependencies(test_alphablending kmstestutils)
 #target_include_directories(test_alphablending PRIVATE
 #                           ${KmsGstCommons_INCLUDE_DIRS}
 #                           ${gstreamer-1.5_INCLUDE_DIRS}
@@ -133,7 +133,7 @@ target_link_libraries(test_dispatcher
 #                      ${KmsGstCommons_LIBRARIES})
 
 #add_test_program (test_dtls dtls.c)
-#add_dependencies(test_dtls rtcpdemux kmsdtls)
+#add_dependencies(test_dtls rtcpdemux)
 #target_include_directories(test_dtls PRIVATE
 #                          ${gstreamer-1.5_INCLUDE_DIRS}
 #                          ${gstreamer-check-1.5_INCLUDE_DIRS}
@@ -145,7 +145,7 @@ target_link_libraries(test_dispatcher
 
 if (${ENABLE_DEBUGGING_TESTS})
   add_test_program (test_dtlssrtp dtlssrtp.c)
-  add_dependencies(test_dtlssrtp rtcpdemux kmsdtls)
+  add_dependencies(test_dtlssrtp rtcpdemux)
   target_include_directories(test_dtlssrtp PRIVATE
                               ${gstreamer-1.5_INCLUDE_DIRS}
                               ${gstreamer-check-1.5_INCLUDE_DIRS}
