Enable destruction of mediaset for valgrind tests
Change-Id: I6c4e9c209f2d5cafc729ec2a71d74ddbee2d456d

--- a/tests/server/CMakeLists.txt
+++ b/tests/server/CMakeLists.txt
@@ -1,10 +1,10 @@
 set (TEST_PROPERTIES
   GST_PLUGIN_PATH=$ENV{GST_PLUGIN_PATH}:${CMAKE_PREFIX_PATH}:${CMAKE_BINARY_DIR}
-#  DEBUG_MEDIASET=TRUE
 )
 
 set (VALGRING_TEST_PROPERTIES
   ${TEST_PROPERTIES}
+  DEBUG_MEDIASET=TRUE
 )
 
 set (SUPPRESSIONS "${CMAKE_CURRENT_SOURCE_DIR}/valgrind.supp")
