--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,8 @@ Build-Depends: debhelper (>= 8.0.0),
  libsoup2.4-dev,
  libkmsnice-dev (>= 0.1.10),
  gstreamer1.5-kmsnice,
- uuid-dev
+ uuid-dev,
+ openwebrtc-gst-plugins-dev
 Standards-Version: 3.9.4
 Homepage: http://kurento.org
 Vcs-Git: git://github.com/Kurento/kms-elements.git
@@ -23,6 +24,7 @@ Depends:
   ${shlibs:Depends},
   ${misc:Depends},
   gstreamer1.5-kmsnice (>= 0.1.10),
+  openwebrtc-gst-plugins,
   kms-core-6.0
 Breaks:
   kms-elements
