--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ generic_find (LIBNAME Boost REQUIRED COMPONENTS unit_test_framework)
 set (GST_REQUIRED ~1.5.0)
 set (GLIB_REQUIRED ^2.38)
 set (SOUP_REQUIRED ^2.40)
-set (NICE_REQUIRED ^0.1.10)
+set (NICE_REQUIRED ^0.1.7)
 set (GLIBMM_REQUIRED ^2.37)
 
 #gst-plugins dependencies
@@ -40,7 +40,7 @@ generic_find (LIBNAME gstreamer-sctp-1.5 REQUIRED)
 generic_find (LIBNAME glibmm-2.4 VERSION ${GLIBMM_REQUIRED} REQUIRED)
 generic_find (LIBNAME KmsGstCommons REQUIRED)
 generic_find (LIBNAME libsoup-2.4 VERSION ${SOUP_REQUIRED} REQUIRED)
-generic_find (LIBNAME kmsnice VERSION ${NICE_REQUIRED} REQUIRED)
+generic_find (LIBNAME nice VERSION ${NICE_REQUIRED} REQUIRED)
 generic_find (LIBNAME gio-2.0 VERSION ${GLIB_REQUIRED} REQUIRED)
 generic_find (LIBNAME uuid REQUIRED)
 
