--- a/src/gst-plugins/rtpendpoint/CMakeLists.txt
+++ b/src/gst-plugins/rtpendpoint/CMakeLists.txt
@@ -22,7 +22,7 @@ include_directories(
   ${gstreamer-pbutils-1.5_INCLUDE_DIRS}
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
-  ${kmsnice_INCLUDE_DIRS}
+  ${nice_INCLUDE_DIRS}
 )
 
 target_link_libraries(rtpendpoint
@@ -31,7 +31,7 @@ target_link_libraries(rtpendpoint
   ${gstreamer-base-1.5_LIBRARIES}
   ${gstreamer-sdp-1.5_LIBRARIES}
   ${gstreamer-pbutils-1.5_LIBRARIES}
-  ${kmsnice_LIBRARIES}
+  ${nice_LIBRARIES}
 )
 
 install(
